# curi

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  annotated.html  classes.html  curi.LICENSE.txt  curi_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_vars.html  group__parsing.html  group__url__decoding.html  index.html  modules.html  readme.md
doc/: CMakeLists.txt  curi.dox.in  index.md
examples/: CMakeLists.txt  common.h  decode_url.c  split_uri.c
src/: CMakeLists.txt  curi.c  curi.h
tests/: CMakeLists.txt  Common.h  Framework.cpp  ParseFullUri.cpp  ParsePath.cpp  ParseQuery.cpp  Parsing.cpp  Settings.cpp  UriParsing.cpp  UrlDecode.cpp
